--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,25 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<!-- Adding build plugins to this project-->
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugins</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>TestRunner.java</include>
+
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
