--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugins</artifactId>
-				<version>3.3.0</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
 				<configuration>
 					<includes>
 						<include>TestRunner.java</include>
